Fix modernizer warnings
Upgraded modernizer is flagging a number of old constructs, modernize
accordingly.

Change-Id: I4dc4569b7af96afe072ac8bd27c419b53e94decd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 6699a9906650a9fd3527c5c2b9120183a1ab69fe)
(cherry picked from commit 013a27303d47fc10ae815577b3d0e98e50a83e6d)